force-app/main/default/objects/Exception__c/Exception__c.object-meta.xml
<CustomObject>
    <label>Exception</label>
    <nameField>
        <label>Name Of The Exception</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exceptions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>