force-app/main/default/objects/Exception__c/fields/Application_Name__c.field-meta.xml
<CustomField>
    <fullName>Application_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Name</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Exceptions</relationshipLabel>
    <relationshipName>Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>