force-app/main/default/objects/Exception__c/fields/Exception_summary__c.field-meta.xml
<CustomField>
    <fullName>Exception_Summary__c</fullName>
    <label>Exception Summary</label>
    <type>TextArea</type>
</CustomField>