force-app/main/default/objects/Exception__c/fields/Name_Of_The_Exception__c.field-meta.xml
<CustomField>
    <fullName>Name_Of_The_Exception__c</fullName>
    <label>Name Of The Exception</label>
    <length>80</length>
    <type>Text</type>
</CustomField>