force-app/main/default/objects/Exception__c/fields/Remediation_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Remediation_Due_Date__c</fullName>
    <label>Remediation Due Date</label>
    <type>Date</type>
</CustomField>