force-app/main/default/objects/Exception__c/fields/Remediation_Owner__c.field-meta.xml
<CustomField>
    <fullName>Remediation_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Remediation Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Exceptions</relationshipLabel>
    <relationshipName>Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>