force-app/main/default/objects/Exception__c/fields/Remediation_Owner_del__c.field-meta.xml
<CustomField>
    <fullName>Remediation_Owner_del__c</fullName>
    <label>Remediation Owner</label>
    <length>80</length>
    <type>Text</type>
</CustomField>