force-app/main/default/objects/Exception__c/fields/Remediation_Plan__c.field-meta.xml
<CustomField>
    <fullName>Remediation_Plan__c</fullName>
    <label>Remediation Plan</label>
    <type>TextArea</type>
</CustomField>