force-app/main/default/objects/Exception__c/fields/Risk_Involved__c.field-meta.xml
<CustomField>
    <fullName>Risk_Involved__c</fullName>
    <label>Risk Involved</label>
    <type>TextArea</type>
</CustomField>