force-app/main/default/objects/Exception__c/fields/Risks_Involved__c.field-meta.xml
<CustomField>
    <fullName>Risks_Involved__c</fullName>
    <label>Risks Involved</label>
    <type>TextArea</type>
</CustomField>