force-app/main/default/objects/Exception__c/recordTypes/New_exception_record_Type.recordType-meta.xml
<RecordType>
    <fullName>New_exception_record_Type</fullName>
    <active>true</active>
    <label>New exception record Type</label>
</RecordType>