force-app/main/default/objects/Exception__c/recordTypes/old_Record.recordType-meta.xml
<RecordType>
    <fullName>old_Record</fullName>
    <active>true</active>
    <label>old Record</label>
</RecordType>