force-app/main/default/objects/Exception__c/validationRules/Application_name_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Application_name_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Application_Name__c )</errorConditionFormula>
    <errorDisplayField>Application_Name__c</errorDisplayField>
    <errorMessage>Name should not be blank.</errorMessage>
</ValidationRule>