force-app/main/default/objects/Exception__c/validationRules/date_field.validationRule-meta.xml
<ValidationRule>
    <fullName>date_field</fullName>
    <active>true</active>
    <errorConditionFormula>Remediation_Due_Date__c  &lt;=  TODAY()</errorConditionFormula>
    <errorDisplayField>Remediation_Due_Date__c</errorDisplayField>
    <errorMessage>Date should be always greater than todays date</errorMessage>
</ValidationRule>