force-app/main/default/objects/Exception__c/listViews/Admin_Exception.listView-meta.xml
<ListView>
    <fullName>Admin_Exception</fullName>
    <filterScope>Queue</filterScope>
    <label>Admin</label>
    <queue>Admin</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>