force-app/main/default/objects/Exception__c/listViews/Supervisor_Exception.listView-meta.xml
<ListView>
    <fullName>Supervisor_Exception</fullName>
    <filterScope>Queue</filterScope>
    <label>Supervisor</label>
    <queue>Supervisor</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>